--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav>
-            <p class="logoname">MASUD</p>
+            <p class="logoname">Nithya</p>
             <ul class="menu">
                 <li>HOME</li>
                 <li>ABOUT</li>
